[gd_scene load_steps=4 format=3 uid="uid://dgrawmb3nqcih"]

[ext_resource type="Script" path="res://Scenes/Levels/parent_level.gd" id="1_2pvnl"]
[ext_resource type="PackedScene" uid="uid://7axf6xtd02n0" path="res://Scenes/player.tscn" id="2_c3wik"]
[ext_resource type="PackedScene" uid="uid://bu2fnfh17cyts" path="res://Scenes/ui_test.tscn" id="3_pfp1l"]

[node name="ParentLevel" type="Node2D"]
position = Vector2(83, 82)
script = ExtResource("1_2pvnl")

[node name="YsortTestNode" type="Node2D" parent="."]

[node name="Player" parent="YsortTestNode" instance=ExtResource("2_c3wik")]
position = Vector2(248, -24)

[node name="Camera2D" type="Camera2D" parent="YsortTestNode/Player"]
zoom = Vector2(3, 3)
position_smoothing_enabled = true

[node name="Bullets" type="Node2D" parent="."]
position = Vector2(22, -7)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.459889, 0.460779, 0.437126, 1)
metadata/_edit_lock_ = true

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
color = Color(0.843184, 0.843184, 0.843184, 1)
blend_mode = 1
metadata/_edit_lock_ = true

[node name="UI_test" parent="." instance=ExtResource("3_pfp1l")]

[connection signal="shoot_bullet" from="YsortTestNode/Player" to="." method="_on_player_shoot_bullet"]
